assets/styles/components/_button.scss
.btn {
  display: inline-block;
  background-color: $color-primary;
  color: $color-white;
  padding: 0.8rem 1.6rem;
  margin-bottom: 0;
  font-weight: 400;
  text-align: center;
  white-space: nowrap;
  vertical-align: middle;
  -ms-touch-action: manipulation;
  touch-action: manipulation;
  cursor: pointer;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  background-image: none;
  border: 1px solid transparent;
  border-radius: 8px;

  &--px2py1 {
    padding: 1rem 2rem !important;
  }

  &--min-120 {
    min-width: 120px;
  }

  &__overlay {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: inherit;
    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 1;
    border-radius: 8px;
  }
}

.btn-full-width {
  width: 100% !important;
}

.reduce-opacity {
  opacity: 0.5;
}

.btn-spinner-submit {
  width: 100%;
  height: 50px !important;
  padding: 15px;
  border-radius: 6px;
  font-size: 16px;
  // border: 1px solid transparent;
  align-items: center;
  justify-content: center;
  margin-bottom: 20px;
}

.spinner {
  width: 25px;
  height: 25px;
}

.rotate {
  animation: rotate 2.5s linear infinite;
}

